# cppkg

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  WORKSPACE  conanfile.py  conanfile.txt  cppkg.bzl  get_version.sh  gtest.bzl  tests.sh
.circleci/: config.yml
arrs/: BUILD.bazel  array.hpp  arrs.hpp  list.hpp  vecs.hpp
arrs/test/: main.cpp  test_array.cpp  test_list.cpp  test_vecs.cpp
cppkg/: BUILD.bazel
cppkg/arrs/: BUILD.bazel  array.h  list.h  vecs.h
cppkg/arrs/test/: test_array.cc  test_list.cc  test_vecs.cc
cppkg/diff/: BUILD.bazel  format.h  msg.cc  msg.h  myers_diff.h
cppkg/diff/test/: main.cc
cppkg/egrpc/: BUILD.bazel  client_async.h  client_async_stream.h  iclient.h  iclient_async.cc  iclient_async.h  icqueue.h  iserver_async.h  server_async.h  server_async_stream.h
cppkg/egrpc/test/: main.cc
cppkg/error/: BUILD.bazel  error.cc  error.h
cppkg/error/test/: main.cc
cppkg/estd/: BUILD.bazel  algorithm.h  cast.h  config.h  contain.h  hashlist.h  range.h  strs.cc  strs.h
cppkg/estd/test/: main.cc  test_cast.cc  test_config.cc  test_contain.cc  test_hashlist.cc  test_range.cc  test_strs.cc
cppkg/flag/: BUILD.bazel  flagset.cc  flagset.h
cppkg/flag/test/: main.cc
cppkg/jobs/: BUILD.bazel  managed_job.h  scope_guard.h  sequence.h
cppkg/jobs/test/: main.cc
cppkg/numbers/: BUILD.bazel  decimal.cc  decimal.h
cppkg/numbers/test/: main.cc
cppkg/units/: BUILD.bazel  memory.cc  memory.h  time.cc  time.h
cppkg/units/test/: test_memory.cc  test_time.cc
diff/: BUILD.bazel  README_DIFF.md  format.hpp  msg.hpp  myers_diff.hpp
diff/src/: msg.cpp
diff/test/: main.cpp
docs/: _r_e_a_d_m_e___d_i_f_f_8md.html  _r_e_a_d_m_e___e_s_t_d_8md.html  _r_e_a_d_m_e___e_x_a_m_8md.html  _r_e_a_d_m_e___f_l_a_g_8md.html  _r_e_a_d_m_e___j_o_b_s_8md.html  annotated.html  classes.html  diff_2test_2main_8cpp.html  diff_2test_2main_8cpp__incl.map  diff_2test_2main_8cpp__incl.md5  dir_000003_000013.html  dir_000004_000005.html  dir_000005_000009.html  dir_000005_000013.html  dir_000007_000005.html  dir_000007_000013.html  dir_05d4be440b8721abba8dc6ba91f6266a.html  dir_05d4be440b8721abba8dc6ba91f6266a_dep.map  dir_05d4be440b8721abba8dc6ba91f6266a_dep.md5  dir_12d79fe113928ff562b6c2368ca53f9a.html  dir_12d79fe113928ff562b6c2368ca53f9a_dep.map  dir_12d79fe113928ff562b6c2368ca53f9a_dep.md5  dir_306674051c4e15fe664bbce6de151dae.html  dir_306674051c4e15fe664bbce6de151dae_dep.map  dir_306674051c4e15fe664bbce6de151dae_dep.md5  dir_6db67a6965956bfde1697eb12e52b0d9.html  dir_6db67a6965956bfde1697eb12e52b0d9_dep.map  dir_6db67a6965956bfde1697eb12e52b0d9_dep.md5  dir_7491988f49cfb33ccd4c6f72fd107454.html  dir_7491988f49cfb33ccd4c6f72fd107454_dep.map  dir_7491988f49cfb33ccd4c6f72fd107454_dep.md5  dir_815950599edbaa3320ebf2164efb225d.html  dir_881a35a3f6eda267f6aeaf25450fabfa.html  dir_881a35a3f6eda267f6aeaf25450fabfa_dep.map  dir_881a35a3f6eda267f6aeaf25450fabfa_dep.md5  dir_88cc6b91e3d85d219994f34d0cfc3443.html  dir_88cc6b91e3d85d219994f34d0cfc3443_dep.map  dir_88cc6b91e3d85d219994f34d0cfc3443_dep.md5  dir_8d4f99c3d819fe1382be5b41248987fc.html  dir_8d4f99c3d819fe1382be5b41248987fc_dep.map  (+225 more)
docs/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e___f_m_t_s_8md.html  _r_e_a_d_m_e___l_o_g_s_8md.html  classes.html  dir_05d4be440b8721abba8dc6ba91f6266a.html  dir_12d79fe113928ff562b6c2368ca53f9a.html  dir_306674051c4e15fe664bbce6de151dae.html  dir_7491988f49cfb33ccd4c6f72fd107454.html  dir_88cc6b91e3d85d219994f34d0cfc3443.html  dir_9a70f5e89ab653d4451e5b1c6e94dcc7.html  dir_b6bd35888d45ed32a80588b86d267dbf.html  dir_e90aab9e8c675331e62674915223ef63.html  dir_f6220448d6d726e70eda8082fee07fdd.html  flag_2test_2main_8cpp.html  flag_8cpp.html  flag_8hpp.html  flag_8hpp_source.html  fmts_2test_2main_8cpp.html  fmts_8cpp.html  fmts_8hpp.html  fmts_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  hierarchy.html  index.html  logs_2test_2main_8cpp.html  logs_8cpp.html  logs_8hpp.html  menudata.js  namespaceflag.html  namespacemembers.html  namespacemembers_func.html  pages.html  struct_f_l_a_g.html  struct_l_o_g_s-members.html  struct_l_o_g_s.html  struct_test_logger.html  structflag_1_1_flag_set-members.html  (+3 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+74 more)
egrpc/: BUILD.bazel  client_async.hpp  client_async_stream.hpp  egrpc.hpp  iserver_async.hpp  server_async.hpp  server_async_stream.hpp
egrpc/src/: client_async.cpp
egrpc/test/: main.cpp  test.proto
error/: BUILD.bazel  error.hpp
error/src/: error.cpp
error/test/: main.cpp
estd/: BUILD.bazel  algorithm.hpp  cast.hpp  config.hpp  contain.hpp  estd.hpp  hash.hpp  hashlist.hpp  range.hpp  strs.hpp  trie.hpp  triebig.hpp  trienode.hpp
estd/test/: main.cpp  test_cast.cpp  test_contain.cpp  test_hash.cpp  test_hashlist.cpp  test_trie.cpp  test_triebig.cpp
exam/: BUILD.bazel  exam.hpp  macros.hpp
exam/src/: exam.cpp
exam/test/: main.cpp
flag/: BUILD.bazel  flag.hpp  flagset.hpp
flag/src/: flag.cpp  flagset.cpp
flag/test/: main.cpp
fmts/: BUILD.bazel  bwd_compatible.hpp  fmts.hpp  format.hpp  ireadable.hpp  istreamable.hpp  istringable.hpp  readable.hpp
fmts/src/: fmts.cpp  format.cpp  ireadable.cpp
fmts/test/: main.cpp  test_format.cpp  test_readable.cpp  test_stringable.cpp
job/: BUILD.bazel  managed_job.hpp  scope_guard.hpp  sequence.hpp
jobs/: BUILD.bazel  managed_job.hpp  scope_guard.hpp  sequence.hpp
logs/: BUILD.bazel  ilogs.hpp  logger.hpp  logs.hpp
logs/src/: logger.cpp  logs.cpp
logs/test/: main.cpp
numbers/: BUILD.bazel  decimal.hpp  numbers.hpp
numbers/src/: decimal.cpp
numbers/test/: main.cpp
scripts/: merge_cov.sh  tests.sh
types/: BUILD.bazel  iterators.hpp  math.hpp  strs.hpp  types.hpp
units/: BUILD.bazel  memory.hpp  time.hpp  units.hpp
units/src/: memory.cpp  time.cpp
units/test/: test_memory.cpp  test_time.cpp
(+18 files in other folders)
