licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### GENERAL SOURCE #########

filegroup(
    name = "srcs",
    srcs = [
        "//flag:srcs",
        "BUILD.bazel",
    ],
)

######### COMMON BASH #########

sh_binary(
    name = "merge_cov",
    srcs = ["scripts/merge_cov.sh"],
)
