licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":arrs_hdrs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "arrs_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARIES #########

cc_library(
    name = "arrs",
    hdrs = [":arrs_hdrs"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "medium",
    srcs = [":test_srcs"],
    deps = [
        ":arrs",
        "//exam:exam",
        "@gtest//:gtest",
    ],
    linkstatic = True,
    copts = ["-std=c++17"],
)
