licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### GENERAL SOURCE #########

filegroup(
    name = "srcs",
    srcs = [
        "//cppkg/diff:srcs",
        "//cppkg/egrpc:srcs",
        "//cppkg/error:srcs",
        "//cppkg/estd:srcs",
        "//cppkg/flag:srcs",
        "//cppkg/jobs:srcs",
        "BUILD.bazel",
    ],
)

