licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":egrpc_hdrs",
        ":egrpc_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "egrpc_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "egrpc_srcs",
    srcs = glob([
        "src/*.cpp",
    ]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARY #########

cc_library(
    name = "egrpc",
    hdrs = [":egrpc_hdrs"],
    srcs = [":egrpc_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//logs:logs",
        "//error:error",
        "@com_github_grpc_grpc//:grpc++",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":egrpc",
        "//exam:exam",
        "@gtest//:gtest",
    ],
    linkstatic = True,
    copts = ["-std=c++17"],
)
