licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":exam_hdrs",
        ":exam_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "exam_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "exam_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARY #########

cc_library(
    name = "exam",
    hdrs = [":exam_hdrs"],
    srcs = [":exam_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "//logs:logs",
        "//fmts:fmts",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":exam",
        "@gtest//:gtest",
    ],
    copts = ["-std=c++17"],
)
