licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":fmt_hdrs",
        ":fmt_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fmt_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "fmt_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARIES #########

cc_library(
    name = "fmts",
    hdrs = [":fmt_hdrs"],
    srcs = [":fmt_srcs"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":fmts",
        "@gtest//:gtest",
    ],
    copts = ["-std=c++17"],
)
