licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":units_hdrs",
        ":units_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "units_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "units_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARY #########

cc_library(
    name = "units",
    hdrs = [":units_hdrs"],
    srcs = [":units_srcs"],
    copts = ["-std=c++17"],
    deps = [
        "@com_github_mingkaic_cisab//fmts:fmts",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":units",
		"@gtest//:gtest",
    ],
    linkstatic = True,
    copts = ["-std=c++17"],
)
