licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":diff_hdrs",
        ":diff_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "diff_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "diff_srcs",
    srcs = glob(["*.cc"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

######### LIBRARIES #########

cc_library(
    name = "diff",
    hdrs = [":diff_hdrs"],
    srcs = [":diff_srcs"],
    deps = ["@com_github_mingkaic_cisab//cisab/fmts"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":diff",
		"@gtest//:gtest",
    ],
    linkstatic = True,
)
