licenses(["notice"])

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

filegroup(
    name = "srcs",
    srcs = [
        ":egrpc_hdrs",
        ":egrpc_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "egrpc_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "egrpc_srcs",
    srcs = glob([
        "*.cc",
    ]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

filegroup(
    name = "test_protos",
    srcs = glob(["pbtest/*.proto"]),
)

######### LIBRARY #########

cc_library(
    name = "egrpc",
    hdrs = [":egrpc_hdrs"],
    srcs = [":egrpc_srcs"],
    deps = [
        "//cppkg/error",
        "@com_github_mingkaic_cisab//cisab/logs",
        "@com_github_grpc_grpc//:grpc++",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

proto_library(
    name = "pbtest_pb",
    srcs = [":test_protos"],
)

cc_grpc_library(
    name = "pbtest_cc_grpc",
    srcs = [":test_protos"],
	deps = [],
)

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":egrpc",
        ":pbtest_cc_grpc",
        "//cppkg/estd",
        "@com_github_mingkaic_verum//verum/exam",
    ],
    linkstatic = True,
)
