licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":estd_hdrs",
        ":estd_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "estd_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "estd_srcs",
    srcs = glob(["*.cc"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

######### LIBRARY #########

cc_library(
    name = "estd",
    hdrs = [":estd_hdrs"],
    srcs = [":estd_srcs"],
    deps = ["@com_github_mingkaic_cisab//cisab/logs"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":estd",
        "@com_github_mingkaic_verum//verum/exam",
    ],
    linkstatic = True,
)
