licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":flag_hdrs",
        ":flag_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "flag_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "flag_srcs",
    srcs = glob(["*.cc"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

######### LIBRARY #########

cc_library(
    name = "flag",
    hdrs = [":flag_hdrs"],
    srcs = [":flag_srcs"],
    deps = [
        "@com_github_mingkaic_cisab//cisab/logs",
        "@boost//:filesystem",
        "@boost//:program_options",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":flag",
		"@gtest//:gtest",
    ],
    linkstatic = True,
)
