licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":jobs_hdrs",
        # ":jobs_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "jobs_hdrs",
    srcs = glob(["*.h"]),
)

# filegroup(
#     name = "jobs_srcs",
#     srcs = glob(["*.cc"]),
# )

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

######### LIBRARIES #########

cc_library(
    name = "jobs",
    hdrs = [":jobs_hdrs"],
    # srcs = [":jobs_srcs"],
    deps = ["@com_github_mingkaic_cisab//cisab/logs"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "medium",
    srcs = [":test_srcs"],
    deps = [
        ":jobs",
		"@gtest//:gtest",
    ],
    linkstatic = True,
)
